fix: missing translation

--- a/turtlemail/templates/turtlemail/deliveries.jinja
+++ b/turtlemail/templates/turtlemail/deliveries.jinja
@@ -36,7 +36,7 @@
                             {% else %}
                                 <div class="flex flex-row gap-2 text-lg font-bold">
                                     {% include "turtlemail/icons/carry.jinja" %}
-                                    Carry
+                                    {{ _("Carry") }}
                                 </div>
                             {% endif %}
                         </div>
