Add mastodon verification link

--- a/turtlemail/templates/turtlemail/index.jinja
+++ b/turtlemail/templates/turtlemail/index.jinja
@@ -7,7 +7,8 @@
                 {{ _("Discover an innovative way to efficiently deliver and send your packages. Our app connects users' journeys with deliveries of other users to create a self-organizing, decentralized peer-to-peer logistic solution.") }}
             </p>
             <div class="flex flex-wrap justify-around gap-2 mt-8">
-                <a href="https://social.tech-coops.de/@turtlemail"
+                <a rel="me"
+                   href="https://social.tech-coops.de/@turtlemail"
                    class="w-12 h-12 transition-all hover:scale-110">{% include "turtlemail/icons/mastodon.jinja" %}</a>
                 <a href="https://t.me/turtlemail"
                    class="w-12 h-12 transition-all hover:scale-110">{% include "turtlemail/icons/telegram.jinja" %}</a>
