--- a/turtlemail/templates/turtlemail/emails/notification_requests.jinja
+++ b/turtlemail/templates/turtlemail/emails/notification_requests.jinja
@@ -2,9 +2,9 @@
 {{ gettext("You have open routing requests in your turtlemail account!") }}
 {{ gettext("The following deliveries wait for your answer:") }}
 {# djlint:off #}
-{% for step in requested_steps %}
+{%- for step in requested_steps %}
   - {{ step.packet.human_id }}
-{% endfor %}
+{%- endfor %}
 {# djlint:on #}
 {{ gettext("Click here to view your deliveries:") }} {{ deliveries_url }}
 {{ gettext("Happy turtlemailing!") }}
