--- a/turtlemail/templates/turtlemail/public_layout.jinja
+++ b/turtlemail/templates/turtlemail/public_layout.jinja
@@ -10,8 +10,15 @@
                 </h1>
             </div>
             <div class="gap-2 navbar-end">
-                <a class="btn btn-sm btn-primary" href="{{ url("signup") }}">{{ _("Sign up") }}</a>
-                <a class="btn btn-sm btn-ghost" href="{{ url("login") }}">{{ _("Log in") }}</a>
+                {% if not request.user.is_authenticated %}
+                    <a class="btn btn-sm btn-primary" href="{{ url("signup") }}">{{ _("Sign up") }}</a>
+                {% endif %}
+                {% if request.user.is_authenticated %}
+                    {% set login_url = "deliveries" %}
+                {% else %}
+                    {% set login_url = "login" %}
+                {% endif %}
+                <a class="btn btn-sm btn-ghost" href="{{ url(login_url) }}">{{ _("Log in") }}</a>
             </div>
         </div>
         <div class="z-10 w-full h-6 rotate-180 bg-base-100 mask-waves"></div>
