--- a/turtlemail/templates/turtlemail/index.jinja
+++ b/turtlemail/templates/turtlemail/index.jinja
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="flex-grow w-1/3 max-w-md">
-            <img src="{{ static("turtlemail/img/landing_page_illustration.svg") }}" alt="{{ _("Cartoon-style image of a smiling turtle carrying other animals on its back") }}" />
+            <object type="image/svg+xml" data="{{ static("turtlemail/img/landing_page_illustration_animated.svg") }}" alt="{{ _("Cartoon-style image of a smiling turtle carrying other animals on its back") }}"></object>
         </div>
     </section>
     <div class="w-full h-8 mt-16 bg-primary mask-waves"></div>
