fix: Missing translation

--- a/turtlemail/templates/turtlemail/user_deleted.jinja
+++ b/turtlemail/templates/turtlemail/user_deleted.jinja
@@ -2,7 +2,7 @@
 {% block content %}
     <section class="p-8 pb-16">
         <div class="alert alert-success">
-            <span>Your account was deleted successfully.</span>
+            <span>{{ _("Your account was deleted successfully") }}.</span>
         </div>
     </section>
 {% endblock %}
